# vlm-modality-ablation

./: .gitignore  LICENSE  README.md  REPRODUCE.md  pyproject.toml
benchmarks/: golden_metrics.json
configs/tasks/: ant.yaml  halfcheetah.yaml  hopper.yaml  humanoid.yaml
configs/variants/: v1_ground_truth.yaml  v2_subtle.yaml  v3_shaping.yaml  v4_blatant.yaml  v5_sim_bug.yaml
data/analysis/: modality_summary.json
data/audits_modality/: ant_v1_ground_truth_episode0_M1_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode0_M2_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode0_M3_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode0_M4_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode0_M5_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode0_M6_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode1_M1_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode1_M2_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode1_M3_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode1_M4_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode1_M5_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode1_M6_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode2_M1_VLMAuditor_gemini-2_5-flash_.json  ant_v1_ground_truth_episode2_M2_VLMAuditor_gemini-2_5-flash_.json  (+346 more)
docs/: PART_FILES.md  RESULTS.md  schemas.md
scripts/: analyze_modality_results.py  collect_rollouts.py  eval_policy.py  fetch_data.sh  generate_frame_descriptions.py  make_env_smoketest.py  run_modality_sweep.py  verify_bundle.py
tests/: conftest.py  test_components.py  test_modality_masking.py  test_reward_wrapper.py  test_rollout.py  test_variants.py
(+124 files in other folders)
